# CalcX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  demo.tape  error.h  main.c
eval/: CMakeLists.txt  Makefile  eval.c  eval.h  eval_expr.c  eval_expr.h  function.c  test_eval.c  utility.c
include/: eval.h
repl/: CMakeLists.txt  repl.c  repl.h
src/: main.c
src/common/: xmalloc.h
src/eval/: CMakeLists.txt  eval.c  eval.h  functions.c  functions.h  table.c  table.h  types.h  utility.c
src/repl/: CMakeLists.txt  repl.c  repl.h  utility.c
test/: test_eval.c
tests/: CMakeLists.txt  test_eval.c
